# pysparkplug-deploy

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
deploy/: .env.example  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml
deploy/cloud/: README.md
deploy/compute/: README.md
deploy/helm/mixle-mlops/: Chart.yaml  values-alicloud.yaml  values-aws.yaml  values-azure.yaml  values-compute-gpu.yaml  values-gcp.yaml  values.yaml
deploy/helm/mixle-mlops/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  ollama.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: configmap.yaml  gateway.yaml  ollama.yaml  pvc.yaml  secret.yaml
deploy/terraform/alicloud/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/aws/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/azure/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/gcp/: README.md  main.tf  outputs.tf  variables.tf
examples/: platform_tour.py
examples/gpu_smoketest/: gpu_check.py
examples/mixle_neural_experts/: README.md  train.py
examples/torch_engine_gpu/: train.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: AuthForm.tsx  Message.tsx  NavBar.tsx
frontend/app/conversations/: page.tsx
frontend/app/datasets/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/evolve/: page.tsx
frontend/app/images/: page.tsx
frontend/app/keys/: page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: api.ts  auth.tsx  files.ts  types.ts
k8s/: deployment.yaml  drift-retrain-cronjob.yaml  pvc.yaml  seed-job.yaml  service.yaml
mixle_mlops/: __init__.py  app.py  cli.py  cloud_init.py  config.py  drift_retrain.py  seed_registry.py
mixle_mlops/accounts/: __init__.py  devicecode.py  models.py  oauth.py  security.py  service.py
mixle_mlops/cache/: __init__.py  base.py  memory.py  ratelimit.py  redis_cache.py  responses.py
mixle_mlops/compute/: __init__.py  jobspec.py  launcher.py  vast.py
mixle_mlops/conversations/: __init__.py  export.py  models.py  service.py
mixle_mlops/core/: __init__.py  adapters.py  decision.py  predictive.py  registry.py
mixle_mlops/datasets/: __init__.py  export.py  generate.py  models.py
mixle_mlops/documents/: __init__.py  parse.py
mixle_mlops/engines/: __init__.py  decode.py  grammar.py  providers.py  regex_fsa.py
mixle_mlops/evolve/: __init__.py  lineage.py  models.py  policy.py  scheduler.py  signals.py  worker.py
mixle_mlops/feedback/: __init__.py  collect.py  elicit.py  feature_reward.py  loop.py  models.py  reward.py
mixle_mlops/gateway/: __init__.py  agent_loop.py  app.py  auth.py  bestofn.py  cascade.py  constrained.py  moa.py  moa_select.py  poe.py  program_offload.py  tool_registry.py  verifiers.py
mixle_mlops/gateway/routes/: __init__.py  accounts.py  cache.py  chat.py  cloud.py  conversations.py  datasets.py  evolve.py  feedback.py  files.py  images.py  mcp.py  mixle.py  models.py  rag.py
mixle_mlops/image_gen/: __init__.py  adapter.py  local_diffusion.py
mixle_mlops/mcp/: __init__.py  client.py  schema_bridge.py  server.py
mixle_mlops/models/: __init__.py  echo.py  local_engine.py  mixle_model.py  openai_compat.py  task_cascade.py
mixle_mlops/multimodal/: __init__.py  content.py  store.py
mixle_mlops/rag/: __init__.py  augment.py  embeddings.py  index.py  models.py  vectorstore.py
mixle_mlops/storage/: __init__.py  db.py  objectstore.py
pysparkplug_deploy/: __init__.py  app.py  drift_retrain.py  seed_registry.py
tests/: test_accounts_oauth.py  test_bestofn.py  test_bridge_wiring.py  test_cache.py  test_cascade.py  test_compute.py  test_constrained.py  test_conversations.py  test_datasets.py  test_engine.py  test_evolve.py  test_evolve_loop.py  test_feature_reward.py  test_feedback.py  test_gateway.py  test_imagegen.py  test_mcp.py  test_mixle.py  test_moa.py  test_moa_select.py  test_multibackend.py  test_multimodal.py  test_objectstore.py  test_pipeline.py  test_poe.py  test_program_offload.py  test_rag.py  test_regex_fsa.py  test_task_cascade.py  test_tools.py  test_verifiers.py
