[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixle-mlops"
version = "0.1.0"
description = "Container / Kubernetes serving layer for mixle models (FastAPI over ModelService)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Grant Boquet" }]
dependencies = [
    # The model primitives (ModelRegistry / ModelService / drift). Published on PyPI as `mixle`;
    # until then install it from git (see README / Dockerfile).
    "mixle>=0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["ruff==0.15.17", "httpx>=0.27", "pytest>=8"]

[project.scripts]
mixle-serve = "mixle_mlops.app:main"
mixle-seed = "mixle_mlops.seed_registry:main"
mixle-drift-retrain = "mixle_mlops.drift_retrain:main"

[project.urls]
Homepage = "https://github.com/gmboquet/mixle-mlops"
Core = "https://github.com/gmboquet/mixle"

[tool.setuptools.packages.find]
include = ["mixle_mlops*"]

[tool.ruff]
line-length = 118
