[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixle-mlops"
version = "0.1.0"
description = "All-in-one AI platform: host mixle models + open LLMs behind one OpenAI-compatible gateway, with accounts, API keys, multimodal, MCP, a chat UI, and a principled (mixle-powered) RLHF feedback loop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Grant Boquet" }]
dependencies = [
    # mixle core (the model primitives + the probabilistic differentiator). Published on PyPI as `mixle`.
    "mixle>=0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",          # proxy to OpenAI-compatible LLM backends (vLLM / Ollama / llama.cpp / hosted)
    "sqlmodel>=0.0.16",     # accounts / keys / registry / conversations / feedback storage
    "python-multipart>=0.0.9",  # multimodal file uploads
]

[project.optional-dependencies]
dev = ["ruff==0.15.17", "pytest>=8", "pytest-asyncio>=0.23", "fakeredis>=2"]
documents = ["pypdf>=4", "python-docx>=1", "python-pptx>=0.6"]   # PDF/DOCX/PPTX ingestion for RAG
scale = ["redis>=5"]                                # shared cache + cross-replica rate limiting
export = ["reportlab>=4"]                           # PDF conversation export (json/markdown are stdlib)
datasets = ["pandas>=2", "pyarrow>=15"]             # parquet dataset export
cloud = ["psycopg[binary]>=3.1", "boto3>=1.34",     # managed Postgres + AWS
         "fsspec>=2023.1", "s3fs", "gcsfs", "adlfs", "ossfs"]   # unified object store: S3/GCS/Azure/OSS
mcp = ["mcp>=1.0"]                                   # MCP server/client (official SDK; minimal fallback otherwise)
all = ["mixle-mlops[documents,scale,export,datasets,cloud,mcp]"]

[project.scripts]
mixle-serve = "mixle_mlops.cli:serve"             # run the platform gateway
mixle-mlops = "mixle_mlops.cli:main"              # admin CLI (init-db, create-user, ...)
mixle-seed = "mixle_mlops.seed_registry:main"
mixle-drift-retrain = "mixle_mlops.drift_retrain:main"

[project.urls]
Homepage = "https://github.com/gmboquet/mixle-mlops"
Core = "https://github.com/gmboquet/mixle"

[tool.setuptools.packages.find]
include = ["mixle_mlops*"]

[tool.ruff]
line-length = 118
